[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Sprites/old-man-talking-sheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/OldMan.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sprites/radar.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 176, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 176, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 176, 256 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 79.0
height = 84.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 84.0
height = 90.0

[node name="OldMan" type="KinematicBody2D" groups=["Old"]]
z_index = 100
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="FieldOfView" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FieldOfView"]
visible = false
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
z_index = 10
polygon = PoolVector2Array( -52, 12, -282, 133, -256, 205, -177, 254, -70, 279, 6, 289, 109, 279, 206, 242, 262, 196, 290, 135, 51, 3 )

[node name="Sprite" type="Sprite" parent="FieldOfView"]
show_behind_parent = true
position = Vector2( 2.50001, 133 )
scale = Vector2( 2.25391, 1.23438 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.25, 0.25 )

[node name="FallDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallDetection"]
shape = SubResource( 6 )

[node name="Explain" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="FieldOfView" to="." method="_on_FieldOfView_area_entered"]
[connection signal="timeout" from="Explain" to="." method="_on_Explain_timeout"]
